[gd_scene load_steps=2 format=3 uid="uid://c8n7gxv6m6gxe"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_q1sk3"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource("1_q1sk3")

[node name="TopBar" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0

[node name="HBoxContainer" type="HBoxContainer" parent="TopBar"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0

[node name="HealthLabel" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
text = "Health: 100"
vertical_alignment = 1

[node name="HSeparator" type="VSeparator" parent="TopBar/HBoxContainer"]
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="TopBar/HBoxContainer"]
layout_mode = 2
text = "Score: 0"
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="TopBar/HBoxContainer"]
layout_mode = 2

[node name="MenuButton" type="Button" parent="TopBar/HBoxContainer"]
layout_mode = 2
text = "Menu"

[connection signal="pressed" from="TopBar/HBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]